--- a/ENGR114-Labs/Lab06-Taylor_Series/ENGR114-Lab06-Taylor_Series.ipynb
+++ b/ENGR114-Labs/Lab06-Taylor_Series/ENGR114-Lab06-Taylor_Series.ipynb
@@ -28,40 +28,35 @@
    "source": [
     "## Lab\n",
     "\n",
-    "Create a new m-file called **taylor_series.py** that will contain a user-defined function.  The function will have the function name, inputs, outputs, and **help** command information as shown.  \\\\\n",
+    "Create a new m-file called **taylor_series.py** that will contain a user-defined function **taylor()**.  The **taylor()** function will have the function name, inputs, outputs, and **help** command information as shown.  \\\\\n",
     "\n",
     "```\n",
-    "def taylor_series(func, x, error_ub, max_iters):\n",
+    "def taylor(func, x, terms):\n",
     "\"\"\"\n",
     "Performs the Taylor series expansion for either the sine of x or\n",
-    "for Euler's number raised to x.  Function returns whether or not\n",
-    "the function converges within the user-defined error_ub \n",
-    "within max_iters iterations.\n",
+    "for Euler's number raised to x.  The taylor() function returns the taylor series approximation of sin(x) or e^(x) with an optional number of terms.\n",
     " \n",
     " Input:\n",
     "     - func: A string describing which function to do the Taylor \n",
     "           series expansion on.  ('sin' for sine(x), 'exp' for e^x)\n",
-    "     - x: Input argument that the function will operate on.  (must be\n",
-    "            >= -50 and <= 50)\n",
-    "     - error_ub: upper bound for error, or maximum allowed error  \n",
-    "           (absolute value) in order to consider the \n",
-    "           series expansion converged. (must be >= 1e-12)\n",
-    "      - max_iters: User-defined maximum iterations to try before \n",
-    "           giving up. (must be positive integer <= 150)\n",
+    "     - x: Input argument that the function will operate on.  Must be a float or an int between -50 and 50\n",
+    "     - terms: number of terms in the taylor series. Must be an int greater than zero up to an including 100.\n",
     " \n",
     " Output:\n",
-    "     - converges: equals 1 if series converged to an error <=  \n",
-    "           error_ub within max_iters or less, else equals 0.\n",
-    "     - iter: if converges is 1, equal to number of iterations it took\n",
-    "           to converge within error_ub, else equals 0.\n",
+    "     - series_sum: equals the sum of all of the terms in the taylor series up to the number of terms specified.\n",
+    "       Will be a float\n",
     "\n",
     "\"\"\"\n",
     "```\n",
     "\n",
     "\n",
-    "Underneath this, include a block comment with your name, the date, and the lab assignment number.  Underneath that, create a function that fulfills the given description.\n",
+    "Underneath the docstring above, include a block comment with your name, the date, and the lab assignment number.  \n",
     "\n",
-    "Your function should verify that all four of its input variables have values as specified in the description, otherwise, use the **error** command to tell the user which variable is invalid and give the constraints.  For example, if a user tries to call the function with **x** set equal to -60, this should trigger the following command.\n",
+    "Underneath the comment block, create a function that fulfills the given description.\n",
+    "\n",
+    "Your function should verify that all three of its input variables have values as specified in the description, otherwise, use the **error** command to tell the user which variable is invalid and give the constraints.\n",
+    "\n",
+    "For example, if a user tries to call the function with **x** set equal to -60, this should trigger the following command.\n",
     "\n",
     "```\n",
     "     error('x must be $>= -50$ and $<= 50$')\n",
@@ -74,7 +69,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The Taylor series for our two functions are below.\n",
+    "The Taylor series for our two functions are below:\n",
     "\n",
     "\\[\\begin{gathered}\n",
     "  {e^x} = \\sum\\limits_{n = 0}^\\infty  {\\frac{{{x^n}}}{{n!}}}  = 1 + x + \\frac{{{x^2}}}{{2!}} + \\frac{{{x^3}}}{{3!}} + \\frac{{{x^4}}}{{4!}} + ... \\hfill \\\\\n",
@@ -96,18 +91,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Note that your **taylor_series** function will not be computing the sum of of these terms, nor will it be approximating the actual value of $sin(x)$ or $e^x$.\n",
+    "Note that your **taylor()** function will not be computing the sum of these terms, this is an estimate compared to the actual value of $sin(x)$ or $e^x$.\n",
     "\n",
     "You might find the following to be somewhat helpful.  Some other recommendations:\n",
     "\n",
-    " * Example 9.6 in your textbook shows how to use an **if/break** statement along with a flowchart of its algorithm.\n",
-    " * Start working with your m-file as a regular script (not a function) with hard coded input values.  This way you can easily run and re-run it for testing.\n",
+    "\n",
+    " * Start working with your .py-file as a regular script (not a function) with hard coded input values.  This way you can easily run and re-run it for testing.\n",
     " * Get either the $e^x$ or the $sin(x)$ capability working before adding the other capability. \n",
     " * Once both of these capabilities are working, do the input validation for all of the input variables.\n",
     " * Test your code often!\n",
     " * Wait until you have verified your function works, along with its input validation, before changing it into a function.\n",
-    " * Now call your function from a separate m-file.  It is easier to change values and re-run this way,v versus calling it from the command line each time.\n",
-    " * Verify your results.  Is your algorithm actually converging on a real solution?  You can add in a variable that sums each term's results. Compare the results of adding the Taylor Series terms to Python's **math** module functions ```math.exp()``` and ```math.sin()```."
+    " * Now call your function **taylor()** from within the **taylor_series.py** file .  It is easier to change values and re-run this way, versus importing the function and calling **>>>taylor()** from the Python REPL.\n",
+    " * Verify your results. Compare the results of adding the Taylor Series terms to Python's **math** module functions ```math.exp()``` and ```math.sin()```."
    ]
   },
   {
@@ -143,7 +138,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
