edits to lab6 taylor series

--- a/ENGR114-Labs/Lab06-Taylor_Series/ENGR114-Lab06-Taylor_Series.ipynb
+++ b/ENGR114-Labs/Lab06-Taylor_Series/ENGR114-Lab06-Taylor_Series.ipynb
@@ -28,7 +28,7 @@
    "source": [
     "## Lab\n",
     "\n",
-    "Create a new m-file called **taylor_series.py** that will contain a user-defined function **taylor()**.  The **taylor()** function will have the function name, inputs, outputs, and **help** command information as shown.  \\\\\n",
+    "Create a new m-file called **taylor_series.py** that will contain a user-defined function **taylor()**. The **taylor()** function will have the function name, inputs, outputs, and **help** command information as shown.\n",
     "\n",
     "```\n",
     "def taylor(func, x, terms):\n",
@@ -91,10 +91,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Note that your **taylor()** function will not be computing the sum of these terms, this is an estimate compared to the actual value of $sin(x)$ or $e^x$.\n",
+    "Note that your **taylor()** function will not compute the exact value of $sin(x)$ or $e^x$, the Taylor Series to a finite number of terms is an estimate compared to the actual value of $sin(x)$ or $e^x$.\n",
     "\n",
-    "You might find the following to be somewhat helpful.  Some other recommendations:\n",
-    "\n",
+    "You might find the following tips somewhat helpful:\n",
     "\n",
     " * Start working with your .py-file as a regular script (not a function) with hard coded input values.  This way you can easily run and re-run it for testing.\n",
     " * Get either the $e^x$ or the $sin(x)$ capability working before adding the other capability. \n",
