--- a/ENGR114-Labs/Lab07-WebAPIs/ENGR101-Lab07-WebAPIs.ipynb
+++ b/ENGR114-Labs/Lab07-WebAPIs/ENGR101-Lab07-WebAPIs.ipynb
@@ -22,7 +22,7 @@
    "source": [
     "## Lab\n",
     "\n",
-    "For this group lab assignment, your group will use Python to interact with a web API to dynamically collect weather information from a Natick, MA weather station and display it to the user. The program will ask the user if they want to plot temperature, humidity, rainfall or pressure. Then the program will ask the user for the number of data points. The program will then produce a plot of the selected weather data from the Natick, MA weather station. "
+    "For this group lab assignment, your group will use Python to interact with a web API to dynamically collect weather information from a Natick, MA weather station and display it to the user. The program will ask the user if they want to plot temperature, humidity, rainfall or pressure. Then the program will ask the user for the number of data points they want to plot. Finally, the program will produce a plot of the selected weather data from the Natick, MA weather station. "
    ]
   },
   {
@@ -34,23 +34,23 @@
     "  * weather data types: temperature, humidity, pressure or rainfall \n",
     "  * Number of data points: maximum of 8000, minimum of 1, integers only \n",
     " * Call the ThingSpeak web API to import the data from the weather station. \n",
-    " * Clean up the data received from the ThingSpeak web API and produce a simple 1D matrix which contains the data points in one column or one row. \n",
-    " * Build a plot that displays the data the user asked for. \tThe plot should contain data point number the x-axis and the weather data on the y-axis (with units) along with a descriptive title. "
+    " * Clean up the data received from the ThingSpeak web API and produce a simple 1D array or series which contains the data points. \n",
+    " * Build a plot that displays the data the user asked for. The plot should contain the data point number the x-axis and the weather data on the y-axis. Include axis labels (with units) along with a descriptive title. "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You will accomplish this in a group. Each group member will be responsible for creating one of four functions: \n",
-    " \t\n",
+    "You will accomplish this task in a group. Each group member is responsible for creating one of four functions: \n",
+    "\n",
     "```user_input()``` A function to gather user input and validate it. The input of this function will be null (), as the requests for user input will come from within the body of the function. Include error checking as part of the function. The output of the function will be a 1D matrix used by the API function below. \n",
     "\n",
-    " \t\n",
-    "```call_API()``` A function to call the ThingSpeak Web API to retrieve the desired weather data. See http://www.mathworks.com/help/thingspeak/get-channel-field-feed.html and Pandas ```read_csv()``` function. An example API call is: ```data = pd.read_csv('https://api.thingspeak.com/channels/12397/fields/4.csv?results=20')``` Only the desired weather data type and number of data points should be retrieved. Note the input for this function will come from the user input function above and the output will be sent to the cleanup function below. \n",
+    "\n",
+    "```call_API()``` A function to call the ThingSpeak Web API to retrieve the desired weather data. See http://www.mathworks.com/help/thingspeak/get-channel-field-feed.html and Pandas ```read_csv()``` function. An example API call is: ```df = pd.read_csv('https://api.thingspeak.com/channels/12397/fields/4.csv?results=20')``` Only the desired weather data type and number of data points should be retrieved. Note the input for this function will come from the user input function above and the output will be sent to the cleanup function below. \n",
     "\n",
     "```clean_data()``` A function to clean up the data and simplify it to a 1D matrix. See the MATLAB table array data types and Chapter 11 in the textbook regarding indexing and pulling data out of table arrays. Try using: df = pd.read_csv('https://api.thingspeak.com/channels/12397/fields/4.csv?results=20') to bring in a sample data set. Note the input of this function comes from the web API function above and the output needs to be a 1D matrix that will be used by the plotting function below. \n",
-    " \t\n",
+    "\n",
     "```plot_data()``` A function to plot the data. Data point number on the x-axis and the weather data on the y-axis. Axis labeled with units. Construct the title and y-axis labels dynamically as these will change based what the user selects. Note the input of this function will be a 1D matrix from the cleanup function above as well as some of the user input gathered by the user input function. The output of this function will be a null output [], but within the body of the function, the plot will be called. "
    ]
   },
@@ -58,8 +58,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "After sharing the functions among your group, each student needs to create their own .m .le script that calls the four functions and completes the programming task. An example of how the .m-.le should work is below: \n",
+    "After sharing the functions among your group, each student needs to create their .py-file script that imports and calls the four functions and completes the programming task. An example of how the .py-file should work is below: \n",
     "\n",
+    "[image of .py-file working]\n",
     "\n",
     "Your group will have to decide on a couple things: \n",
     " \n",
@@ -69,7 +70,7 @@
     " \n",
     " * What will be the standard function inputs and outputs? The output from one function will be needed as input for another function. \n",
     " \n",
-    "Ensure your functions contain doc string descriptions and examples. Ensure all the code is sectioned and commented with about one line of comments per line of code. "
+    "Ensure your functions contain doc string descriptions and examples. Ensure all the code is sectioned and commented."
    ]
   },
   {
@@ -80,15 +81,15 @@
     "\n",
     "Each student’s submissions for the lab should contain the following files (all four function files and your script that calls them) regardless of which function you constructed. Upload these 5 files to the D2L Lab 7 Uploads folder. \n",
     "\n",
-    "user_input.py \n",
+    " * user_input.py \n",
     "\n",
-    "call_API.py\n",
+    " * call_API.py\n",
     "\n",
-    "clean_data.py\n",
+    " * clean_data.py\n",
     "\n",
-    "plot_data.py\n",
+    " * plot_data.py\n",
     "\n",
-    "lab7.py"
+    " * lab7.py"
    ]
   },
   {
@@ -115,7 +116,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
