--- a/ENGR114-Labs/Lab09-MicroPython/ENGR114-Lab09-MicroPython.ipynb
+++ b/ENGR114-Labs/Lab09-MicroPython/ENGR114-Lab09-MicroPython.ipynb
@@ -40,7 +40,7 @@
    "source": [
     "### Installation\n",
     "\n",
-    "MicroPython should already be installed on your ESP8266 Microcontroller when you start the lab. If you are unable to run any commands at the MicroPython REPL, this might mean that MicroPython has not been pre-installed. Check with your instructor to determine if MicorPython installation is the issue. If you do need to install MicrPython on your ESP8266, refer to this resource: [Installing Micropython on an Adafruit Feather Huzzah ESP8266](https://pythonforundergradengineers.com/micropython-install.html)"
+    "MicroPython should already be installed on your ESP8266 Microcontroller when you start the lab. If you are unable to run any commands at the MicroPython REPL, this might mean that MicroPython has not been pre-installed. Check with your instructor to determine if MicorPython installation is the issue. If you do need to install MicroPython on your ESP8266, refer to this resource: [Installing Micropython on an Adafruit Feather Huzzah ESP8266](https://pythonforundergradengineers.com/micropython-install.html)"
    ]
   },
   {
@@ -92,7 +92,7 @@
     "\n",
     "![PuTTY configuration](images/putty_config.PNG)\n",
     "\n",
-    "This should bring up the MicroPython REPL prompt ```>>>```. If you can't see the ```>>>``` prompt, try typing [Enter], Ctrl-D, pushing the RESET button on the Feather Huzzah or unplugging then replugging the USB cable.\n",
+    "This should bring up the MicroPython REPL prompt ```>>>```. If you can't see the ```>>>``` prompt, try typing [Enter], Ctrl-D, pushing the RESET button on the ESP8266 microcontroller or unplugging then replugging the USB cable.\n",
     "\n",
     "![MicroPython REPL prompt](images/REPL_prompt.PNG)"
    ]
@@ -127,7 +127,7 @@
     "\n",
     "![Results of running sys commands at the MicroPython REPL prompt](images/sys_dot_implementation_and_platform.PNG)\n",
     "\n",
-    "If you see similar output, that means MicroPython is working on the Feather Huzzah. We can also view the flash memory size of our Feather Huzzah and the size of the MicroPython firmware we installed. Try this at the MicroPython prompt:\n",
+    "If you see similar output, that means MicroPython is working on the ESP8266 Microcontroller. We can also view the flash memory size of our microcontroller and the size of the MicroPython firmware we installed. Try this at the MicroPython prompt:\n",
     "\n",
     "```text\n",
     ">>> import port_diag\n",
@@ -163,7 +163,7 @@
     "Hello World\n",
     "```\n",
     "\n",
-    "Next, we will blink the Feather Huzzah's built-in LED. The Feather Huzzah has a built-in LED connected to Pin 0. If we control the current going to Pin 0, we control the built-in LED. To control a Pin using MicroPython, first the **machine** module needs to be imported. Next a ```Pin``` object needs to be created. The integer passed into ```machine.Pin()``` determines the pin number assigned to the ```Pin``` object.\n",
+    "Next, we will blink the ESP8266 micrcontroller's built-in LED. The microcontroller has a built-in LED connected to Pin 0. If we control the current going to Pin 0, we control the built-in LED. To control a Pin using MicroPython, first import the **machine** module. Next a ```Pin``` object needs to be created. The integer passed into ```machine.Pin()``` determines the pin number assigned to the ```Pin``` object.\n",
     "\n",
     "```text\n",
     ">>> import machine\n",
@@ -262,14 +262,14 @@
     "\n",
     "```text\n",
     ">>> import machine\n",
-    ">>> i2c = machine.I2C(scl=machine.Pin(5), sda=machine.Pin(4))\n",
-    ">>> byte_data = bytearray(2)\n",
-    ">>> i2c.readfrom_mem_into(24, 5, byte_data)\n",
-    ">>> value = byte_data[0] << 8 | byte_data[1]\n",
-    ">>> temp = (value & 0xFFF) / 16.0\n",
-    ">>> if value & 0x1000:\n",
-    "...     temp -= 256.0\n",
-    ".....   print(temp)\n",
+    ">>> import time\n",
+    ">>> pin = machine.Pin(0, machine.Pin.IN)\n",
+    ">>> for i in range(10):\n",
+    "...     print(pin.value())\n",
+    "...     time.sleep(0.5)\n",
+    "# backspace to exit loop indent and execute the loop.\n",
+    ".... \n",
+    "\n",
     "```"
    ]
   },
