images to Arduino lab

--- a/ENGR114-Labs/Lab08-External_Hardware/ENGR114-Lab08-External-Hardware.ipynb
+++ b/ENGR114-Labs/Lab08-External_Hardware/ENGR114-Lab08-External-Hardware.ipynb
@@ -20,13 +20,17 @@
    "source": [
     "## Prelab\n",
     "\n",
-    "Before starting the lab, familiarize yourself with what an Arduino is and what an Arduino can be used for. You will .nd numerous projects if you google “Arduino project”. Try to download the Arduino IDE using the following link: \n",
+    "Before starting the lab, familiarize yourself with what an Arduino is and what an Arduino can be used for. You will find numerous projects if you Google “Arduino project”. Try to download the Arduino IDE using the following link: \n",
     "\n",
     " > https://www.arduino.cc/en/Main/Software\n",
     " \n",
-    "Be sure to select: Windows ZIP for non-admin install as new software can not be installed on lab computers without administrator privileges. Investigate the Arudino IDE (launched by double clicking Arduino.exe). See what is available in the [File] --> [Examples] menu. Before lab, also familiarize yourself with the concept of serial communication. In this lab, Python will communicate with an Arduino over a serial connection. Serial communication is one of the older computer hardware communication specifications and a precursor to USB (universal serial bus) communication used by keyboards, mice thumb drives etc. \n",
+    "Be sure to select: Windows ZIP for non-admin install as new software can not be installed on lab computers without administrator privileges. \n",
     "\n",
-    "Part of the lab will follow a tutorial from the Sparkfun Inventor’s Kit (https://www.sparkfun.com/products/retired/12060) click on the Documents link on the product page to review the guide. "
+    "![Arduino IDE Download Page](images/arduino_download_page.png)\n",
+    "\n",
+    "Investigate the Arudino IDE (launch by double clicking Arduino.exe). See what is available in the [File] --> [Examples] menu. Before lab, also familiarize yourself with the concept of serial communication. In this lab, Python will communicate with an Arduino over a serial connection. Serial communication is one of the older computer hardware communication specifications and a precursor to USB (universal serial bus) communication used by keyboards, mice thumb drives etc. \n",
+    "\n",
+    "Part of this lab will follow a tutorial from the Sparkfun Inventor’s Kit (https://www.sparkfun.com/products/retired/12060) click on the Documents link on the product page to review the guide. "
    ]
   },
   {
@@ -35,16 +39,16 @@
    "source": [
     "## Lab\n",
     "\n",
-    "For this group lab assignment, your group will use MATLAB to interact with an Arduino to dynamically turn on and off an LED and then use Python to collect and plot sensor input. There will be two Python scripts to construct and two Arduino scripts used to complete these tasks. At the end of the lab, you will be able to use MATLAB interact with external hardware.\n",
+    "For this group lab assignment, your group will use Python to interact with an Arduino to dynamically turn on and off an LED and then use Python to collect and plot sensor input. There will be two Python scripts to construct and two Arduino scripts used to complete these tasks. At the end of the lab, you will be able to use Python to interact with external hardware.\n",
     "\n",
-    "In order for your group to accomplish this task, you will need to complete the following steps: "
+    "An outline of the steps to complete this lab is below:"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Part 1: Turn on/off an LED connected to an Arduino using MATLAB \n",
+    "### Part 1: Turn on/off an LED connected to an Arduino using Python \n",
     "\n",
     "(a) Download the Arduino IDE \n",
     "\n",
@@ -56,20 +60,20 @@
     "\n",
     "(e) Use the serial monitor to turn the Arduino LED on and o. \n",
     "\n",
-    "(f) Build a MATLAB script and use MATLAB to turn the Arduino LED on and o.. "
+    "(f) Build a Python script and use Python to turn the Arduino LED on and off. "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Part 2: Measure sensor output with an Arduino and MATLAB \n",
+    "### Part 2: Measure sensor output with an Arduino and Python\n",
     "\n",
     "(a) Wire a little blue potentiometer dial to the Arduino \n",
     "\n",
     "(b) Load the Arduino potentiometer.ino sketch onto the Arduino \n",
     "\n",
-    "(c) Twist the little blue potentiometer to turn the LED connected to the Arduino on and o. \n",
+    "(c) Twist the little blue potentiometer to turn the LED connected to the Arduino on and off. \n",
     "\n",
     "(d) Build a Python script and to record the potentiometer level and draw a plot. \n",
     "\n",
@@ -80,9 +84,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You will accomplish this in your groups. Below are details for each step in order to complete the lab. \n",
+    "You will complete this lab in groups. Below are details for each of the steps outlined above. \n",
     "\n",
-    "### Part 1. Turn on/o. an connected to an Arduino \n",
+    "### Part 1. Turn an LED on and off with Python and an Arduino \n",
     "\n",
     "#### (a) Download the Arduino IDE \n",
     "\n",
@@ -92,11 +96,12 @@
     "\n",
     "Scroll down the page to the Download the Arduino IDE section. Be sure to select: Windows ZIP for for non-admin install as new software can not be installed on lab computers without administrator privileges. You can select JUST DOWNLOAD from the donation screen. Extract the downloaded .zip folder to your thumb drive or the desktop. \n",
     "\n",
-    "\n",
     "#### (b) Wire an LED to the Arduino \n",
     "\n",
-    "From the Arduino kit, .nd an LED, a 330 O resistor and two jumper wires. Connect the LED, resistor and wires as shown below. Also see the SIK GUIDE page 19 and the SparkFun Iventor’s kit online guide: \n",
-    "https://learn.sparkfun.com/tutorials/sik-experiment-guide-for-arduino—v33/experiment-1-blinking-an-led \n",
+    "From the Arduino kit, take out an LED, a 330 Ohm resistor and two jumper wires. Connect the LED, resistor and wires as shown below. Also see the SIK GUIDE page 19 and the SparkFun Iventor’s kit online guide: \n",
+    "https://learn.sparkfun.com/tutorials/sik-experiment-guide-for-arduino—v33/experiment-1-blinking-an-led\n",
+    "\n",
+    "![Arduino with LED Frizting](images/Arduino_LED_fritzing.png)\n",
     "\n",
     "#### (c) Upload the Arduino example sketch blink.ino onto the Arduino. \n",
     "\n",
@@ -365,7 +370,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
