Lab8 Arduino edits, just need to add pics now

--- a/ENGR114-Labs/Lab08-External_Hardware/ENGR114-Lab08-External-Hardware.ipynb
+++ b/ENGR114-Labs/Lab08-External_Hardware/ENGR114-Lab08-External-Hardware.ipynb
@@ -24,13 +24,13 @@
     "\n",
     " > https://www.arduino.cc/en/Main/Software\n",
     " \n",
-    "Be sure to select: Windows ZIP for non-admin install as new software can not be installed on lab computers without administrator privileges. \n",
+    "Be sure to select: [Windows ZIP for non-admin install] as new software can not be installed on lab computers without administrator privileges. \n",
     "\n",
     "![Arduino IDE Download Page](images/arduino_download_page.png)\n",
     "\n",
-    "Investigate the Arudino IDE (launch by double clicking Arduino.exe). See what is available in the [File] --> [Examples] menu. Before lab, also familiarize yourself with the concept of serial communication. In this lab, Python will communicate with an Arduino over a serial connection. Serial communication is one of the older computer hardware communication specifications and a precursor to USB (universal serial bus) communication used by keyboards, mice thumb drives etc. \n",
+    "Investigate the Arudino IDE (launch by double clicking Arduino.exe). See what is available in the [File] --> [Examples] menu. Before lab, also familiarize yourself with the concept of serial communication. In this lab, Python will communicate with an Arduino over a serial connection. Serial communication is one of the older computer hardware communication specifications and a precursor to USB (universal _serial_ bus) communication used by keyboards, mice, printers, thumb drives etc. \n",
     "\n",
-    "Part of this lab will follow a tutorial from the Sparkfun Inventor’s Kit (https://www.sparkfun.com/products/retired/12060) click on the Documents link on the product page to review the guide. "
+    "Part of this lab will follow a tutorial from the Sparkfun Inventor’s Kit (https://www.sparkfun.com/products/retired/12060) click on the [Documents] link on the product page to review the guide. "
    ]
   },
   {
@@ -39,7 +39,7 @@
    "source": [
     "## Lab\n",
     "\n",
-    "For this group lab assignment, your group will use Python to interact with an Arduino to dynamically turn on and off an LED and then use Python to collect and plot sensor input. There will be two Python scripts to construct and two Arduino scripts used to complete these tasks. At the end of the lab, you will be able to use Python to interact with external hardware.\n",
+    "For this group lab assignment, your group will use Python to interact with an Arduino to dynamically turn on and off an LED, and then use Python to collect and plot sensor input. There will be two Python scripts to construct and two Arduino scripts used to complete these tasks. At the end of the lab, you will be able to use Python to interact with external hardware.\n",
     "\n",
     "An outline of the steps to complete this lab is below:"
    ]
@@ -48,36 +48,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Part 1: Turn on/off an LED connected to an Arduino using Python \n",
+    "### Part 1: Turn an LED on and off with Python and an Arduino \n",
     "\n",
     "(a) Download the Arduino IDE \n",
     "\n",
     "(b) Wire an LED and resistor to the Arduino \n",
     "\n",
-    "(c) Load the Arduino Example sketch Blink to the Arduino. Con.rm your Arduino and LED blinks \n",
+    "(c) Upload the Arduino example sketch blink.ino onto the Arduino. Confirm your Arduino and LED blinks. \n",
     "\n",
-    "(d) Load the Arduino Example sketch PhysicalPixel.ino \n",
+    "(d) Load the Arduino example sketch PhysicalPixel.ino\n",
     "\n",
-    "(e) Use the serial monitor to turn the Arduino LED on and o. \n",
+    "(e) Use the serial monitor to turn the Arduino LED on and off \n",
     "\n",
-    "(f) Build a Python script and use Python to turn the Arduino LED on and off. "
+    "(f) Build a Python script to turn the Arduino LED on and off"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Part 2: Measure sensor output with an Arduino and Python\n",
+    "### Part 2: Measure sensor output with Python and an Arduino\n",
     "\n",
     "(a) Wire a little blue potentiometer dial to the Arduino \n",
     "\n",
-    "(b) Load the Arduino potentiometer.ino sketch onto the Arduino \n",
+    "(b) Copy and load the potentiometer.ion sketch onto the Arduino  \n",
     "\n",
-    "(c) Twist the little blue potentiometer to turn the LED connected to the Arduino on and off. \n",
+    "(c) Twist the potentiometer to turn the LED connected to the Arduino on and off\n",
     "\n",
-    "(d) Build a Python script and to record the potentiometer level and draw a plot. \n",
+    "(d) Use the Arduino Serial Monitor and Serial Plotter to see the potentiometer reading\n",
     "\n",
-    "(e) Upload your Python scripts to D2L. "
+    "(e) Build a Python script and to record the potentiometer level and draw a plot "
    ]
   },
   {
@@ -86,35 +86,64 @@
    "source": [
     "You will complete this lab in groups. Below are details for each of the steps outlined above. \n",
     "\n",
-    "### Part 1. Turn an LED on and off with Python and an Arduino \n",
-    "\n",
+    "### Part 1. Turn an LED on and off with Python and an Arduino "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### (a) Download the Arduino IDE \n",
     "\n",
     "Download the Arduino IDE using the following link: \n",
     "\n",
     " > https://www.arduino.cc/en/Main/Software \n",
     "\n",
-    "Scroll down the page to the Download the Arduino IDE section. Be sure to select: Windows ZIP for for non-admin install as new software can not be installed on lab computers without administrator privileges. You can select JUST DOWNLOAD from the donation screen. Extract the downloaded .zip folder to your thumb drive or the desktop. \n",
-    "\n",
+    "Scroll down the page to the Download the Arduino IDE section. Be sure to select: Windows ZIP for for non-admin install as new software can not be installed on lab computers without administrator privileges. You can select JUST DOWNLOAD from the donation screen. Extract the downloaded .zip folder to your thumb drive or the desktop. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### (b) Wire an LED to the Arduino \n",
     "\n",
     "From the Arduino kit, take out an LED, a 330 Ohm resistor and two jumper wires. Connect the LED, resistor and wires as shown below. Also see the SIK GUIDE page 19 and the SparkFun Iventor’s kit online guide: \n",
     "https://learn.sparkfun.com/tutorials/sik-experiment-guide-for-arduino—v33/experiment-1-blinking-an-led\n",
     "\n",
-    "![Arduino with LED Frizting](images/Arduino_LED_fritzing.png)\n",
-    "\n",
-    "#### (c) Upload the Arduino example sketch blink.ino onto the Arduino. \n",
+    "![Arduino with LED Frizting](images/Arduino_LED_fritzing.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### (c) Upload the Arduino example sketch Blink.ino onto the Arduino. Confirm your Arduino and LED blinks.\n",
     "\n",
     "Open the Arduino IDE folder and open the Arduino.exe program. Open the Arduino Blink.ino sketch by going to: [File] -->  [Examples] --> [Basics] -->  [01.Blink]\n",
     "\n",
-    "Connect the Arduino to the computer using the red USB cable. Note that USB ports in monitors sometimes do not work correctly. Use a USB which is part of the computer. In the Arduino IDE Window that contains the Blink sketch, click the check mark to Verify, then click the arrow to Upload. \n",
+    "Connect the Arduino to the computer using the red USB cable. Note that USB ports in monitors sometimes do not work correctly with Arduinos. Use a USB port which is part of the computer. In the Arduino IDE Window that contains the Blink sketch, click the check mark to Verify, then click the arrow to Upload. \n",
     "\n",
-    "Once the upload is complete, the red LED on the Arduino should blink on and off. If you don’t see the Arduino's LED blinking, you need to do some trouble shooting. Check the COM Port or try unplugging and re-plugging in the Arduino. \n",
+    "![Check to Verify](#)\n",
     "\n",
-    "#### (d) Load the Arduino example sketch PhysicalPixel \n",
+    "![Arrow to Upload](#)\n",
     "\n",
-    "Open the Arduino PhysicalPixel.ino sketch by going to: [File] --> [Examples] --> [04.Communication] -->  [PhysicalPixel]. Once again, In the Arduino IDE Window that contains the PhysicalPixel sketch, click the check mark to Verify then click the arrow to Upload. \n",
+    "Once the upload is complete, the red LED on the Arduino should blink on and off. If you don’t see the Arduino's LED blinking, you need to do some trouble shooting. Check the COM Port or try unplugging and re-plugging in the Arduino. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### (d) Load the Arduino example sketch PhysicalPixel.ino \n",
     "\n",
+    "Open the Arduino PhysicalPixel.ino sketch by going to: [File] --> [Examples] --> [04.Communication] -->  [PhysicalPixel]. Once again, In the Arduino IDE Window that contains the PhysicalPixel sketch, click the check mark to Verify then click the arrow to Upload. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### (e) Use the serial monitor to turn the Arduino LED on and off\n",
     "\n",
     "In the Arduino IDE Window that contains the PhysicalPixel sketch, open the Serial Monitor by going to [Tools] --> [Serial Monitor].\n",
@@ -126,7 +155,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Part 2. Build a MATLAB script to turn the Arduino LED on and off\n",
+    "#### (f) Build a Python script to turn the Arduino LED on and off\n",
     "\n",
     "If the Arduino is working correctly and the LED can be turned on and off by typing ```H``` and ```L``` in the Serial Monitor, close the Serial Monitor. If the Serial Monitor is left open, Python will not be able to talk to the Arduino.\n",
     "\n",
@@ -214,15 +243,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Part 3. Measure sensor output with an Arduino and MATLAB \n",
-    "\n",
+    "### Part 2. Measure sensor output with Python and an Arduino "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### (a) Wire a potentiometer dial to the Arduino \n",
     "\n",
     "Once you have completed the first two parts of the lab and can turn the Arduino LED on and OFF using Python, the next part of the lab is to use read a sensor (a potentiometer dial) connected to the Arduino and plot the data. \n",
     "\n",
-    "To do this, you first need to connect connect the potentiometer to the Arduino. You should leave your LED and resistor attached as you will use this with the potentiometer. Unplug the Arduino USB cable and connect the small blue potentiometer dial to your Arduino as shown below. Also see the SIK GUIDE page 25 and the SparkFun Iventor’s kit online guide: https://learn.sparkfun.com/tutorials/sik-experiment-guide-for-arduino—v33/experiment-2-reading-a-potentiometer \n",
+    "To do this, you first need to connect connect the potentiometer to the Arduino. You should leave your LED and resistor attached as you will use this with the potentiometer. Unplug the Arduino USB cable and connect the small blue potentiometer dial to your Arduino as shown below. Also see the SIK GUIDE page 25 and the SparkFun Iventor’s kit online guide: https://learn.sparkfun.com/tutorials/sik-experiment-guide-for-arduino—v33/experiment-2-reading-a-potentiometer\n",
     "\n",
-    "#### (b) Load the Arduino Potentiometer sketch onto the Arduino \n",
+    "![Arduino Potentiometer Fritzing Sketch](#)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### (b) Copy and load the potentiometer.ion sketch onto the Arduino \n",
     "\n",
     "Open a new sketch in the Arduino IDE by going to [File] --> [New]. Copy the code below into the new sketch and save the sketch as potentiometer **read.ino** \n",
     "\n",
@@ -252,28 +293,48 @@
     "\n",
     "```\n",
     "\n",
-    "Plug the Arduino USB cable back into the computer. In the Arduino IDE window that contains the potentiometer **read.ino** sketch, click the check mark to Verify the click the arrow to Upload the potentiometer **read.ino** sketch to the Arduino. \n",
-    "\n",
-    "#### (c) Twist the potentiometer to turn the LED connected to the Arduino on and off\n",
-    "\n",
-    "After the potentiometer **read.ino** sketch is uploaded to the Arduino, twist the small blue potentiometer dial back and forth and watch the LED turn on and off. The on/off point should be about half way through the little blue potentiometer’s rotation. If the LED does not turn on and off, double check your wiring and try uploading the sketch again. Ensure the Serial Monitor is closed and that Python closed the Serial Port before uploading. \n",
-    "\n",
-    "#### (d) Use the Arduino Serial Monitor and Serial Plotter to see the potentiometer reading\n",
-    "\n",
-    "Open the Arduino Serial Monitor in the Arduino IDE by going to [Tools] --> [Serial Monitor]. You should see numbers scrolling down the Serial Monitor if the potentiometer **read.ino** sketch is working properly. Twist the little blue potentiometer and watch the numbers scrolling down the Serial Monitor change.\n",
-    "\n",
-    "Next, close the Serial Monitor and open the Arduino Serial Plotter by going to [Tools] --> [Serial Plotter]. You should see a plot with a moving line. Twist the little blue potentiometer and observe the line on the plot move up and down. If the Serial Plotter works, close the Serial Plotter Window. If Serial Plotter isn’t working, make sure the COM port is set correctly in the Arduino IDE, and ensure the serial port was closed by Python. The Arduino Serial Monitor and Serial Plotter can not be open at the same time and both need to be closed before Python can communicate with the Arduino. "
+    "Plug the Arduino USB cable back into the computer. In the Arduino IDE window that contains the potentiometer **read.ino** sketch, click the check mark to Verify the click the arrow to Upload the potentiometer **read.ino** sketch to the Arduino. "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Part 4. Build a MATLAB script to record and plot the potentiometer level \n",
+    "#### (c) Twist the potentiometer to turn the LED connected to the Arduino on and off\n",
     "\n",
-    "After you successfully turn the Arduino LED on and off. by twisting the little blue potentiometer and can see the plot line moving up and down in the Serial Plotter, build a Python script which reads and plots the potentiometer value. \n",
+    "After the potentiometer **read.ino** sketch is uploaded to the Arduino, twist the small blue potentiometer dial back and forth and watch the LED turn on and off. The on/off point should be about half way through the little blue potentiometer’s rotation. If the LED does not turn on and off, double check your wiring and try uploading the sketch again. Ensure the Serial Monitor is closed and that Python closed the Serial Port before uploading. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### (d) Use the Arduino Serial Monitor and Serial Plotter to see the potentiometer reading\n",
     "\n",
-    "#### (a) Read the potentiometer value with Python \n",
+    "Open the Arduino Serial Monitor in the Arduino IDE by going to [Tools] --> [Serial Monitor]. \n",
+    "\n",
+    "![Arduino Tools --> Serial Monitor](images/Tools_SerialMonitor.png)\n",
+    "\n",
+    "You should see numbers scrolling down the Serial Monitor if the potentiometer **read.ino** sketch is working properly. Twist the little blue potentiometer and watch the numbers scrolling down the Serial Monitor change.\n",
+    "\n",
+    "![Arduino Serial Monitor](images/serial_monitor_output.png)\n",
+    "\n",
+    "Next, close the Serial Monitor and open the Arduino Serial Plotter by going to [Tools] --> [Serial Plotter]. \n",
+    "\n",
+    "![Arduino Tools --> Serial Plotter](images/Tools_SerialPlotter.png)\n",
+    "\n",
+    "You should see a plot with a moving line. Twist the little blue potentiometer and observe the line on the plot move up and down. If the Serial Plotter works, close the Serial Plotter Window. If Serial Plotter isn’t working, make sure the COM port is set correctly in the Arduino IDE, and ensure the serial port was closed by Python. The Arduino Serial Monitor and Serial Plotter can not be open at the same time and both need to be closed before Python can communicate with the Arduino. \n",
+    "\n",
+    "![Arduino Serial Plotter](images/serial_plotter_output.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### (e) Build a Python script and to record the potentiometer level and draw a plot\n",
+    "\n",
+    "After you can successfully turn the Arduino LED on and off by twisting the little blue potentiometer, and can see the plot line moving up and down in the Serial Plotter, build a Python script which reads and plots the potentiometer value. \n",
     "\n",
     "To read the potentiometer value with Python, a new script called **potentiometer.py** should be created. At the start of the Python script include the standard docstring header within triple quotes ```\"\"\" \"\"\"``` Include a line for a title, and lines for your name, the lab number and name, course/quarter and date. \n",
     "\n",
@@ -307,14 +368,14 @@
     "Enter the number of seconds to record data (0 - 60) : 10\n",
     "```\n",
     "\n",
-    "[plot]"
+    "[matplotlib plot of potentiometer data](#)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Part 5. Going further \n",
+    "### Going further \n",
     "\n",
     "If you have time, there is some additional functionality you can add to your Python script: \n",
     "\n",
@@ -370,7 +431,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
